--- a/ToDo
+++ b/ToDo
@@ -1,31 +1,12 @@
-- Subversion 1.3 をインストール
-    - Ruby バインディングをインストール
-- tukumo に Subversion レポジトリを作成
-- チェックアウト
-- リファレンスの最新版をとってくる
-- man-rd-ja を種類ごとに分類する
-- 標準添付ライブラリのクラスごとのファイルを整理する
-- ファイル refm/api/src/_builtin/* をコミット
-* ファイル単位でコンパイルできるようにする
-* CGI にする
-* ファイル単位で見えるようにする
-* クラス / メソッド名のインデックスを作る
-    * コミットがあったら svn up & インデックスリビルド
-* クラス単位で見えるようにする
-* 継承をサポート
-* メソッド単位で見えるようにする
-* メソッド検索を実装
-    * 完全検索
-    * 部分一致検索
-    * 継承
-* FastCGI に対応する
-* リファレンス以外の部分を整備する
-    * インデックス
-    * Ruby の文法
-    * クラスリファレンス
-    * インストールマニュアル
-    * FAQ
-    * RHG?
+* クラスリファレンス本体
+	* フォーマット変換 (組み込み)
+	* フォーマット変換 (標準添付)
+* クラスリファレンス、その他
+* Ruby の文法
 * サイト公開
+* FAQ
+* インストールマニュアル
+* 拡張ライブラリ API リファレンス
+* RHG?
 * 前田さんに頼んで www.ruby-lang.org のアカウントをもらう
 * ruby-lang.org に移植
