--- a/ToDo
+++ b/ToDo
@@ -1,12 +1,15 @@
-* クラスリファレンス本体
-	- フォーマット変換 (組み込み)
-	* フォーマット変換 (標準添付)
-* クラスリファレンス、その他
+- クラスリファレンス：組み込み：フォーマット変換
+* クラスリファレンス：標準添付：フォーマット変換
+* クラスリファレンス：組み込み：既存のエントリの内容をチェック
+* クラスリファレンス：標準添付：既存のエントリの内容をチェック
+* クラスリファレンス：標準添付：すべてのクラスとメソッドのエントリを揃える
+* クラスリファレンス：標準添付：すべてのライブラリのドキュメントを書く
+* クラスリファレンス：標準添付：すべてのクラスとメソッドのドキュメントを整備する
+* 拡張ライブラリ API リファレンス
 * Ruby の文法
 * サイト公開
 * FAQ
 * インストールマニュアル
-* 拡張ライブラリ API リファレンス
 * RHG?
 * 前田さんに頼んで www.ruby-lang.org のアカウントをもらう
 * ruby-lang.org に移植
