--- a/README
+++ b/README
@@ -1,49 +1,49 @@
-Ruby$B%j%U%!%l%s%9%^%K%e%"%k:~?77W2h(B README
+Ruby¥ê¥Õ¥¡¥ì¥ó¥¹¥Þ¥Ë¥å¥¢¥ëºþ¿··×²è README
 ======================================
 
-$B%W%m%8%'%/%H$NL\I8(B
+¥×¥í¥¸¥§¥¯¥È¤ÎÌÜÉ¸
 ----------------
 
-$B%W%m%8%'%/%H$NEvLL$NL\I8$O0J2<$NDL$j$G$9!#(B
+¥×¥í¥¸¥§¥¯¥È¤ÎÅöÌÌ¤ÎÌÜÉ¸¤Ï°Ê²¼¤ÎÄÌ¤ê¤Ç¤¹¡£
 
-  * Ruby 1.8.6 or 7 $B$N%j%j!<%9$HF1;~$K!"$=$l$KBP1~$7$?(B
-    $B40A4$J%j%U%!%l%s%9%^%K%e%"%k$r%j%j!<%9$9$k$3$H(B
+  * Ruby 1.8.6 or 7 ¤Î¥ê¥ê¡¼¥¹¤ÈÆ±»þ¤Ë¡¢¤½¤ì¤ËÂÐ±þ¤·¤¿
+    ´°Á´¤Ê¥ê¥Õ¥¡¥ì¥ó¥¹¥Þ¥Ë¥å¥¢¥ë¤ò¥ê¥ê¡¼¥¹¤¹¤ë¤³¤È
 
-$B!V40A4$J!W$r@53N$K8@$&$H<!$N$h$&$K$J$j$^$9!#(B
+¡Ö´°Á´¤Ê¡×¤òÀµ³Î¤Ë¸À¤¦¤È¼¡¤Î¤è¤¦¤Ë¤Ê¤ê¤Þ¤¹¡£
 
-  * $B8@8l;EMM$,$9$Y$F5-=R$5$l$F$$$k(B
-  * $B$9$Y$F$NAH$_9~$_%i%$%V%i%j!&I8=`E:IU%i%$%V%i%j$N(B
-    $B%I%-%e%a%s%H$,MQ0U$5$l$F$$$k(B
-  * $B%*%s%i%$%s(B HTML$B!"@EE*(B HTML$B!"(BHTML Help$B!"(B(info)$B!"(B
-    ReFe $B%G!<%?%Y!<%9$N$9$Y$F$,MQ0U$5$l$F$$$k(B
-  * $B=q$-$+$1$N9`L\$,$J$$(B
-  * $B$G$-$k$3$H$J$iF|K\8lE*$KM%$l$F$$$k$[$&$,$h$$(B
+  * ¸À¸ì»ÅÍÍ¤¬¤¹¤Ù¤Æµ­½Ò¤µ¤ì¤Æ¤¤¤ë
+  * ¤¹¤Ù¤Æ¤ÎÁÈ¤ß¹þ¤ß¥é¥¤¥Ö¥é¥ê¡¦É¸½àÅºÉÕ¥é¥¤¥Ö¥é¥ê¤Î
+    ¥É¥­¥å¥á¥ó¥È¤¬ÍÑ°Õ¤µ¤ì¤Æ¤¤¤ë
+  * ¥ª¥ó¥é¥¤¥ó HTML¡¢ÀÅÅª HTML¡¢HTML Help¡¢(info)¡¢
+    ReFe ¥Ç¡¼¥¿¥Ù¡¼¥¹¤Î¤¹¤Ù¤Æ¤¬ÍÑ°Õ¤µ¤ì¤Æ¤¤¤ë
+  * ½ñ¤­¤«¤±¤Î¹àÌÜ¤¬¤Ê¤¤
+  * ¤Ç¤­¤ë¤³¤È¤Ê¤éÆüËÜ¸ìÅª¤ËÍ¥¤ì¤Æ¤¤¤ë¤Û¤¦¤¬¤è¤¤
 
-$B$3$NL\I8$rF'$^$($F!"$5$i$KEvLL$NL\I8$O!"8=:_(B RWiki $B$K$"$k(B
-$B%I%-%e%a%s%H$r!"$"$k$Y$-7A$G?7%7%9%F%`>e$K0\$9$H$$$&$3$H$K(B
-$B$J$j$^$9!#6qBNE*$K$O<!$N$h$&$J$3$H$G$9!#(B
+¤³¤ÎÌÜÉ¸¤òÆ§¤Þ¤¨¤Æ¡¢¤µ¤é¤ËÅöÌÌ¤ÎÌÜÉ¸¤Ï¡¢¸½ºß RWiki ¤Ë¤¢¤ë
+¥É¥­¥å¥á¥ó¥È¤ò¡¢¤¢¤ë¤Ù¤­·Á¤Ç¿·¥·¥¹¥Æ¥à¾å¤Ë°Ü¤¹¤È¤¤¤¦¤³¤È¤Ë
+¤Ê¤ê¤Þ¤¹¡£¶ñÂÎÅª¤Ë¤Ï¼¡¤Î¤è¤¦¤Ê¤³¤È¤Ç¤¹¡£
 
-  * $B%U%!%$%k$N:FG[CV(B
-  * $B%I%-%e%a%s%H%U%)!<%^%C%H$NJQ49(B
-  * $B$D$$$G$KJ8>O$NDI2C!&D>$7(B ($BK\6Z$G$O$J$$(B)
-  * $B?7$7$$(B CSS $B$N:n@.(B
-  * HTML Help $B:n@.%W%m%0%i%`$N:n@.(B
+  * ¥Õ¥¡¥¤¥ë¤ÎºÆÇÛÃÖ
+  * ¥É¥­¥å¥á¥ó¥È¥Õ¥©¡¼¥Þ¥Ã¥È¤ÎÊÑ´¹
+  * ¤Ä¤¤¤Ç¤ËÊ¸¾Ï¤ÎÄÉ²Ã¡¦Ä¾¤· (ËÜ¶Ú¤Ç¤Ï¤Ê¤¤)
+  * ¿·¤·¤¤ CSS ¤ÎºîÀ®
+  * HTML Help ºîÀ®¥×¥í¥°¥é¥à¤ÎºîÀ®
 
 
-$B%W%m%8%'%/%H$N8=>u(B
+¥×¥í¥¸¥§¥¯¥È¤Î¸½¾õ
 ----------------
 
-$B%W%m%8%'%/%H$N8=>u$O0J2<$NDL$j$G$9!#(B
+¥×¥í¥¸¥§¥¯¥È¤Î¸½¾õ¤Ï°Ê²¼¤ÎÄÌ¤ê¤Ç¤¹¡£
 
-* $B%/%i%9%j%U%!%l%s%9$O?t8D$N%U%!%$%k$r=|$-JQ4940N;!#(B
-  $B$?$@$7!"%O%$%Q!<%j%s%/$J$I$OJQ49$7$F$$$J$$>l9g$,$"$k!#(B
-* $B%/%i%9%j%U%!%l%s%90J30$O<j$D$+$:$N$^$^!#(B
+* ¥¯¥é¥¹¥ê¥Õ¥¡¥ì¥ó¥¹¤Ï¿ô¸Ä¤Î¥Õ¥¡¥¤¥ë¤ò½ü¤­ÊÑ´¹´°Î»¡£
+  ¤¿¤À¤·¡¢¥Ï¥¤¥Ñ¡¼¥ê¥ó¥¯¤Ê¤É¤ÏÊÑ´¹¤·¤Æ¤¤¤Ê¤¤¾ì¹ç¤¬¤¢¤ë¡£
+* ¥¯¥é¥¹¥ê¥Õ¥¡¥ì¥ó¥¹°Ê³°¤Ï¼ê¤Ä¤«¤º¤Î¤Þ¤Þ¡£
 
-$B>\$7$/$O(B ToDo $B%U%!%$%k$r8+$F$/$@$5$$!#(B
+¾Ü¤·¤¯¤Ï ToDo ¥Õ¥¡¥¤¥ë¤ò¸«¤Æ¤¯¤À¤µ¤¤¡£
 
 
-$B:n6HJ}K!(B
+ºî¶ÈÊýË¡
 -------
 
-$B%W%m%8%'%/%H%a%s%P!<$N6qBNE*$J:n6HJ}K!$K$D$$$F$O!"(B
-$B3F%5%V%G%#%l%/%H%j$N(B NOTE $B%U%!%$%k$r8+$F$/$@$5$$!#(B
+¥×¥í¥¸¥§¥¯¥È¥á¥ó¥Ð¡¼¤Î¶ñÂÎÅª¤Êºî¶ÈÊýË¡¤Ë¤Ä¤¤¤Æ¤Ï¡¢
+³Æ¥µ¥Ö¥Ç¥£¥ì¥¯¥È¥ê¤Î NOTE ¥Õ¥¡¥¤¥ë¤ò¸«¤Æ¤¯¤À¤µ¤¤¡£
