--- a/ToDo
+++ b/ToDo
@@ -1,15 +1,1 @@
-- クラスリファレンス：組み込み：フォーマット変換
-- クラスリファレンス：標準添付：フォーマット変換
-* クラスリファレンス：組み込み：すべてのクラスとメソッドのエントリを揃える
-* クラスリファレンス：標準添付：すべてのクラスとメソッドのエントリを揃える
-* クラスリファレンス：標準添付：すべてのライブラリのドキュメントを書く
-* クラスリファレンス：組み込み：既存のエントリの内容をチェック
-* クラスリファレンス：標準添付：既存のエントリの内容をチェック
-* 拡張ライブラリ API リファレンス
-* Ruby の文法
-* FAQ
-* インストールマニュアル
-* RHG?
-* 前田さんに頼んで www.ruby-lang.org のアカウントをもらう
-* ruby-lang.org に移植
-* サイト公開
+see http://doc.loveruby.net/wiki/ToDo
