--- a/README
+++ b/README
@@ -1,4 +1,5 @@
 Rubyリファレンスマニュアル刷新計画 README
 =========================================
 
-See: http://doc.loveruby.net/wiki/
+See: http://redmine.ruby-lang.org/wiki/rurema
+
