--- a/ToDo
+++ b/ToDo
@@ -1,4 +1,4 @@
 TODO
 ====================================
 
-see http://doc.loveruby.net/wiki/ToDo
+see http://redmine.ruby-lang.org/wiki/rurema/ToDo
